--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             <p>Never use the same password again</p>
         </div>
         <div id="gen-btn-sec">
-            <button class="generate-btn" onclick="generatePasswordOne()" ondblclick="generatePasswordTwo()">Generate Password</button>
+            <button id="generate-btn">Generate Password</button>
         </div>
         <div id="password-sec">
             <p class="password-btn" id="password-first"></p>
